--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,22 @@ hr {
     border-top: 3px solid #bbb;
 }
 
-button {
+.button {
     font-size: 24px;
     display: block;
     margin-bottom: 20px;
     width: 100%;
+    text-align: center;
+    background-color: rgb(235, 235, 235);
+    padding: 10px 0;
+    border-style: solid;
+    border-width: 1px;
+    border-color: gray;
+    border-radius: 10px;
+}
+
+.button:hover {
+    background-color: lightgray;
 }
 
 a {
